automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,7 +1,8 @@
 <h1>Create a Team and Heroes!</h1>
 
 <form action="/team" method="post">
-  <input type="text" name="">
+  <label for="team_name">Team Name:</label>
+  <input id="team_name" type="text" name=""></input>
 
   <input type="submit" value="submit"></input>
 </form>
