automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -3,9 +3,13 @@
 <form action="/team" method="post">
   <p>
     <label for="team_name">Team Name:</label>
-    <input id="team_name" type="text" name=""></input>
-    <label for="team_name">Team Name:</label>
-    <input id="team_name" type="text" name=""></input>    
+    <input id="team_name" type="text" name="team_name"></input>
+    <label for="team_motto">Team Motto:</label>
+    <input id="team_motto" type="text" name="team_motto"></input>    
+  </p>
+  <h2>Hero 1</h2>
+  <p>
+    
   </p>
 
   <input type="submit" value="submit"></input>
