--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -5,11 +5,16 @@
     <label for="team_name">Team Name:</label>
     <input id="team_name" type="text" name="team_name"></input>
     <label for="team_motto">Team Motto:</label>
-    <input id="team_motto" type="text" name="team_motto"></input>    
+    <input id="team_motto" type="text" name="team_motto"></input>
   </p>
   <h2>Hero 1</h2>
   <p>
-    
+    <label for="hero_name_1">Hero's Name:</label>
+    <input id="hero_name_1" type="text" name="hero_name_1"></input>
+    <label for="hero_power_1">Hero's Power:</label>
+    <input id="hero_power_1" type="text" name="hero_power_1"></input>
+    <label for="hero_biography_1">Hero's Biography:</label>
+    <input id="hero_biography_1" type="text" name="hero_biography_1"></input>
   </p>
 
   <input type="submit" value="submit"></input>
