automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,6 +1,6 @@
 <h1>Create a Team and Heroes!</h1>
 
-<form action="/team" method="post">
+<form action="/teams" method="post">
   <p>
     <label for="team_name">Team Name:</label>
     <input id="team_name" type="text" name="team_name"></input>
