--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -3,7 +3,7 @@
 <form action="/teams" method="post">
   <p>
     <label for="team_name">Team Name:</label>
-    <input id="team_name" type="text" name="team_name"></input>
+    <input id="team_name" type="text" name="team[name]"></input>
   </p>
   <p>
     <label for="team_motto">Team Motto:</label>
