--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -7,7 +7,7 @@
   </p>
   <p>
     <label for="team_motto">Team Motto:</label>
-    <input id="team_motto" type="text" name="team_motto"></input>
+    <input id="team_motto" type="text" name="team[motto]"></input>
   </p>
   <h2>Hero 1</h2>
   <p>
