automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -16,11 +16,11 @@
   </p>
   <p>
     <label for="hero_power_1">Hero's Power:</label>
-    <input id="hero_power_1" type="text" name="hero_power_1"></input>
+    <input id="hero_power_1" type="text" name="member1_power"></input>
   </p>
   <p>
     <label for="hero_biography_1">Hero's Biography:</label>
-    <input id="hero_biography_1" type="text" name="hero_biography_1"></input>
+    <input id="hero_biography_1" type="text" name="member1_biography"></input>
   </p>
   <h2>Hero 2</h2>
   <p>
