automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -20,7 +20,7 @@
   </p>
   <p>
     <label for="hero_biography_1">Hero's Biography:</label>
-    <input id="hero_biography_1" type="text" name="member1_biography"></input>
+    <input id="hero_biography_1" type="text" name="member1_bio"></input>
   </p>
   <h2>Hero 2</h2>
   <p>
