--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -25,28 +25,28 @@
   <h2>Hero 2</h2>
   <p>
     <label for="hero_name_2">Hero's Name:</label>
-    <input id="hero_name_2" type="text" name="hero_name_2"></input>
+    <input id="hero_name_2" type="text" name="member2_name"></input>
   </p>
   <p>
     <label for="hero_power_2">Hero's Power:</label>
-    <input id="hero_power_2" type="text" name="hero_power_2"></input>
+    <input id="hero_power_2" type="text" name="member2_power"></input>
   </p>
   <p>
     <label for="hero_biography_2">Hero's Biography:</label>
-    <input id="hero_biography_2" type="text" name="hero_biography_2"></input>
+    <input id="hero_biography_2" type="text" name="member2_bio"></input>
   </p>
   <h2>Hero 3</h2>
   <p>
     <label for="hero_name_3">Hero's Name:</label>
-    <input id="hero_name_3" type="text" name="hero_name_3"></input>
+    <input id="hero_name_3" type="text" name="member3_name"></input>
   </p>
   <p>
     <label for="hero_power_3">Hero's Power:</label>
-    <input id="hero_power_3" type="text" name="hero_power_3"></input>
+    <input id="hero_power_3" type="text" name="member3_power"></input>
   </p>
   <p>
     <label for="hero_biography_3">Hero's Biography:</label>
-    <input id="hero_biography_3" type="text" name="hero_biography_3"></input>
+    <input id="hero_biography_3" type="text" name="member3_bio"></input>
   </p>
 
   <input type="submit" value="submit"></input>
