--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -12,7 +12,7 @@
   <h2>Hero 1</h2>
   <p>
     <label for="hero_name_1">Hero's Name:</label>
-    <input id="hero_name_1" type="text" name="member1_name"></input>
+    <input id="hero_name_1" type="text" name="team[hero][0][member1_name]"></input>
   </p>
   <p>
     <label for="hero_power_1">Hero's Power:</label>
