--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -3,4 +3,21 @@
 
 <h2><%= @team[member1_name] %></h2>
 <p>
-  Hero Power: <%= @team[]
+  Hero Power: <%= @team[member1_power] %>
+  <br />
+  Hero Biography: <%= @team[member1_bio] %>
+</p>
+
+<h2><%= @team[member2_name] %></h2>
+<p>
+  Hero Power: <%= @team[member2_power] %>
+  <br />
+  Hero Biography: <%= @team[member2_bio] %>
+</p>
+
+<h2><%= @team[member3_name] %></h2>
+<p>
+  Hero Power: <%= @team[member3_power] %>
+  <br />
+  Hero Biography: <%= @team[member3_bio] %>
+</p>
