--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,5 +1,5 @@
-<h1><%= @team[name] %></h1>
-<h2><%= @team[motto] %></h2>
+<h1><%= @team.name %></h1>
+<h2><%= @team.motto %></h2>
 
 <h2><%= @team[member1_name] %></h2>
 <p>
