--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -12,11 +12,11 @@
   <h2>Hero 1</h2>
   <p>
     <label for="hero_name_1">Hero's Name:</label>
-    <input id="hero_name_1" type="text" name="member1_name"></input>
+    <input id="hero_name_1" type="text" name="team[hero][][name]"></input>
   </p>
   <p>
     <label for="hero_power_1">Hero's Power:</label>
-    <input id="hero_power_1" type="text" name="member1_power"></input>
+    <input id="hero_power_1" type="text" name="team[hero][][power]"></input>
   </p>
   <p>
     <label for="hero_biography_1">Hero's Biography:</label>
