automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -12,15 +12,15 @@
   <h2>Hero 1</h2>
   <p>
     <label for="hero_name_1">Hero's Name:</label>
-    <input id="hero_name_1" type="text" name="team[members][][name]"></input>
+    <input id="hero_name_1" type="text" name="member1_name"></input>
   </p>
   <p>
     <label for="hero_power_1">Hero's Power:</label>
-    <input id="hero_power_1" type="text" name="team[members][][power]"></input>
+    <input id="hero_power_1" type="text" name="member1_power"></input>
   </p>
   <p>
     <label for="hero_biography_1">Hero's Biography:</label>
-    <input id="hero_biography_1" type="text" name="team[members][][bio]"></input>
+    <input id="hero_biography_1" type="text" name="member1_bio"></input>
   </p>
   <h2>Hero 2</h2>
   <p>
