automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -11,42 +11,42 @@
   </p>
   <h2>Hero 1</h2>
   <p>
-    <label for="hero_name_1">Hero's Name:</label>
-    <input id="hero_name_1" type="text" name="member1_name"></input>
+    <label for="member1_name">Hero's Name:</label>
+    <input id="member1_name" type="text" name="team[members][][name]"></input> <!-- Spec test does not allow nested form so will need to do it somewhere else -->
   </p>
   <p>
-    <label for="hero_power_1">Hero's Power:</label>
-    <input id="hero_power_1" type="text" name="member1_power"></input>
+    <label for="member1_power">Hero's Power:</label>
+    <input id="member1_power" type="text" name="team[members][][power]"></input>
   </p>
   <p>
-    <label for="hero_biography_1">Hero's Biography:</label>
-    <input id="hero_biography_1" type="text" name="member1_bio"></input>
+    <label for="member1_bio">Hero's Biography:</label>
+    <input id="member1_bio" type="text" name="member1_bio"></input>
   </p>
   <h2>Hero 2</h2>
   <p>
-    <label for="hero_name_2">Hero's Name:</label>
-    <input id="hero_name_2" type="text" name="member2_name"></input>
+    <label for="member2_name">Hero's Name:</label>
+    <input id="member2_name" type="text" name="member2_name"></input>
   </p>
   <p>
-    <label for="hero_power_2">Hero's Power:</label>
-    <input id="hero_power_2" type="text" name="member2_power"></input>
+    <label for="member2_power">Hero's Power:</label>
+    <input id="member2_power" type="text" name="member2_power"></input>
   </p>
   <p>
-    <label for="hero_biography_2">Hero's Biography:</label>
-    <input id="hero_biography_2" type="text" name="member2_bio"></input>
+    <label for="member2_bio">Hero's Biography:</label>
+    <input id="member2_bio" type="text" name="member2_bio"></input>
   </p>
   <h2>Hero 3</h2>
   <p>
-    <label for="hero_name_3">Hero's Name:</label>
-    <input id="hero_name_3" type="text" name="member3_name"></input>
+    <label for="member3_name">Hero's Name:</label>
+    <input id="member3_name" type="text" name="member3_name"></input>
   </p>
   <p>
-    <label for="hero_power_3">Hero's Power:</label>
-    <input id="hero_power_3" type="text" name="member3_power"></input>
+    <label for="member3_power">Hero's Power:</label>
+    <input id="member3_power" type="text" name="member3_power"></input>
   </p>
   <p>
-    <label for="hero_biography_3">Hero's Biography:</label>
-    <input id="hero_biography_3" type="text" name="member3_bio"></input>
+    <label for="member3_bio">Hero's Biography:</label>
+    <input id="member3_bio" type="text" name="team[members][][bio]"></input>
   </p>
 
   <input type="submit" value="submit"></input>
