automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -20,29 +20,29 @@
   </p>
   <p>
     <label for="member1_bio">Hero's Biography:</label>
-    <input id="member1_bio" type="text" name="member1_bio"></input>
+    <input id="member1_bio" type="text" name="team[members][][bio]"></input>
   </p>
   <h2>Hero 2</h2>
   <p>
     <label for="member2_name">Hero's Name:</label>
-    <input id="member2_name" type="text" name="member2_name"></input>
+    <input id="member2_name" type="text" name="team[members][][name]"></input>
   </p>
   <p>
     <label for="member2_power">Hero's Power:</label>
-    <input id="member2_power" type="text" name="member2_power"></input>
+    <input id="member2_power" type="text" name="team[members][][power]"></input>
   </p>
   <p>
     <label for="member2_bio">Hero's Biography:</label>
-    <input id="member2_bio" type="text" name="member2_bio"></input>
+    <input id="member2_bio" type="text" name="team[members][][bio]"></input>
   </p>
   <h2>Hero 3</h2>
   <p>
     <label for="member3_name">Hero's Name:</label>
-    <input id="member3_name" type="text" name="member3_name"></input>
+    <input id="member3_name" type="text" name="team[members][][name]"></input>
   </p>
   <p>
     <label for="member3_power">Hero's Power:</label>
-    <input id="member3_power" type="text" name="member3_power"></input>
+    <input id="member3_power" type="text" name="team[members][][power]"></input>
   </p>
   <p>
     <label for="member3_bio">Hero's Biography:</label>
