automatically backed up by learn

--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,7 +1,7 @@
 <h1><%= @team.name %></h1>
 <h2><%= @team.motto %></h2>
 
-<h2><%= @team[member1_name] %></h2>
+<h2><%= @all_heros[0].name %></h2>
 <p>
   Hero Power: <%= @team[member1_power] %>
   <br />
