--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -3,21 +3,21 @@
 
 <h2><%= @all_heros[0].name %></h2>
 <p>
-  Hero Power: <%= @team[member1_power] %>
+  Hero Power: <%= @all_heros[0].power %>
   <br />
-  Hero Biography: <%= @team[member1_bio] %>
+  Hero Biography: <%= @all_heros[0].bio %>
 </p>
 
-<h2><%= @team[member2_name] %></h2>
+<h2><%= @all_heros[1].name %></h2>
 <p>
-  Hero Power: <%= @team[member2_power] %>
+  Hero Power: <%= @all_heros[1].power %>
   <br />
-  Hero Biography: <%= @team[member2_bio] %>
+  Hero Biography: <%= @all_heros[1].bio %>
 </p>
 
-<h2><%= @team[member3_name] %></h2>
+<h2><%= @all_heros[2].name %></h2>
 <p>
-  Hero Power: <%= @team[member3_power] %>
+  Hero Power: <%= @all_heros[2].power %>
   <br />
-  Hero Biography: <%= @team[member3_bio] %>
+  Hero Biography: <%= @all_heros[2].bio %>
 </p>
