automatically backed up by learn

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -12,7 +12,7 @@
   <h2>Hero 1</h2>
   <p>
     <label for="member1_name">Hero's Name:</label>
-    <input id="member1_name" type="text" name="team[members][][name]"></input> <!-- Spec test does not allow nested form so will need to do it somewhere else -->
+    <input id="member1_name" type="text" name="team[members][][name]"></input>
   </p>
   <p>
     <label for="member1_power">Hero's Power:</label>
